Added a friendlier title and tagline

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>Angelchou.GitHub.io</h1>
-          <h2>Github Pages</h2>
+          <h1>Welcome to AngelChou's homepage!</h1>
+          <h2>feel free to bookmark this to keep an eye on my project updates.</h2>
         </header>
 
         <section id="downloads" class="clearfix">
